# quant-mcp

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: curated_etfs.json
docs/: LANDING.md  LOOM_SCRIPT.md  index.html
quant_mcp/: __init__.py  cache.py  curated.py  disclaimer.py  finance.py  prices.py
