[project]
name = "quant-mcp"
version = "0.0.3"
description = "Model Context Protocol server exposing UCITS ETF analytics — compare, factor metrics, Monte Carlo projection — with formulas, sources, and disclaimers in every payload."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Mihai Andrei" }]
keywords = ["mcp", "model-context-protocol", "etf", "ucits", "finance", "claude", "yfinance"]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pandas>=3.0.2",
    "yfinance>=1.3.0",
]
